--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header {
 }
 
 .header-right img {
-  width: 600px;
+  width: 100%;
 }
 
 .header-left {
@@ -155,6 +155,8 @@ header {
 }
 
 .feature-card {
+  min-width: 100%;
+  margin-block: 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -189,7 +191,7 @@ header {
 .example-card {
   flex-direction: column;
   width: 23%;
-  min-height: 300px;
+  /* min-height: 300px; */
   background-color: black;
   color: white;
   justify-content: end;
